# Info-FAT

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
client/: Dockerfile  index.html  package.json
client/src/: App.tsx  index.css  styles.module.css
client/src/components/button/: download.module.css  download.tsx
client/src/components/header/: header.module.css  header.tsx
client/src/components/table/: pagination.module.css  pagination.tsx  table.module.css  table.styles.css  (+3 more)
client/src/hooks/: useFat.ts  useFilteredFat.ts
client/src/models/: fat.ts
infofat/: __main__.py
infofat/application/: __init__.py
infofat/application/use_case/: __init__.py  database.py  report.py
infofat/domain/: __init__.py
infofat/domain/ports/: __init__.py  data_reader.py  data_writer.py
infofat/domain/services/: __init__.py  asf.py  interface.py  merge.py  olt.py
infofat/infrastructure/: __init__.py
infofat/infrastructure/api/: app.py
infofat/infrastructure/cli/: main.py
infofat/infrastructure/dto/: __init__.py  fat.py
infofat/infrastructure/mappers/: fat.py
infofat/infrastructure/readers/: __init__.py  base.py  csv.py  excel.py
infofat/infrastructure/services/: __init__.py  fat.py
infofat/infrastructure/writers/: __init__.py  base.py  csv.py  excel.py
infofat/shared/: __init__.py
infofat/shared/constants/: __init__.py  columns.py  metadata.py
infofat/shared/errors/: __init__.py  error.py
infofat/shared/outputs/: __init__.py  logger.py  terminal.py
(+12 files in other folders)
