[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "infofat"
version = "0.1.0"
description = "System for visualizing OLT equipment FAT information"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Angyee Marin", email = "angyeemarin.dev@gmail.com" }
]
keywords = ["grd", "network", "data-processing"]
dependencies = [
    "click>=8.1.8",
    "fastapi",
    "fastapi-cli",
    "openpyxl>=3.1.5",
    "pandas>=1.3.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "rich>=13.9.4",
    "uvicorn",
]
urls = { Homepage = "https://github.com/xanv754/SystemCGPRD" }

[project.scripts]
scanbackup = "infofat.infrastructure.cli.main:cli"

[project.optional-dependencies]
dev = ["black"]

[tool.setuptools.packages.find]
where = ["."]
include = ["infofat*"]